tests/integration/snapshots/integration__conformance__n_structure_ascii-unicode-identifier.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
aå
stdout ---

stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:1
  |
1 | aå
  | ^
